# pdl-morph-server

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: build-and-release.yml
clojure/: .gitignore  README.md  deps.edn
clojure/docs/: aggregate-parallelism-plan.md
clojure/resources/migrations/: 001_init_db.down.sql  001_init_db.up.sql
clojure/src/perseus_morph/: features.clj  language.clj  main.clj  migrations.clj  sqlite.clj
clojure/src/perseus_morph/frequencies/: aggregator.clj  document.clj
clojure/src/perseus_morph/lexica/: core.clj  xml_parser.clj
clojure/src/perseus_morph/loader/: core.clj
clojure/src/perseus_morph/walker/: core.clj  parses.clj
clojure/test/perseus_morph/: language_test.clj  walker_test.clj
clojure/test/perseus_morph/frequencies/: aggregator_test.clj  document_test.clj
clojure/test/perseus_morph/lexica/: core_test.clj  xml_parser_test.clj
clojure/test/perseus_morph/loader/: core_test.clj
deploy/: compose.yaml  cron-deploy.sh
docs/: ai-notes.md
pdl-morph-server/: build_indexes.py  main.py
scripts/: convert_greek_morph_to_unicode.py  convert_latin_morph.py  convert_middle_liddell_to_unicode.py
src/: build_indexes.py  main.py
src/new_morpheus/: db.py  language.py  main.py  models.py  morph.py  schemas.py
src/new_morpheus/templates/: base.html.jinja  morph.html.jinja
src/new_morpheus/templates/text_elements/: bibl.html.jinja  i.html.jinja  l.html.jinja  pb.html.jinja  quote.html.jinja  sense.html.jinja  token.html.jinja
src/templates/: base.html.jinja  morph.html.jinja
tests/: conftest.py  test_api.py  test_betacode.py  test_frequency.py  test_language.py  test_morph.py  test_words.py
tools/: setup_morph_data.py
