[project]
name = "pdl-morph-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "peter nadel", email = "peter.m.nadel@gmail.com"},
]
dependencies = ["beautifulsoup4>=4.14.3", "pydantic>=2.13.4", "tqdm>=4.67.3", "fastapi>=0.136.3", "beta-code>=1.1.1", "uvicorn>=0.49.0", "jinja2>=3.1.6"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx2>=2.3.0",
]
