[project]
name = "new-morpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beta-code>=1.1.1",
    "fastapi>=0.137.2",
    "kodon-py",
    "lxml>=6.1.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
new-morpheus-dev = "new_morpheus.main:dev"
new-morpheus = "new_morpheus.main:serve"

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kodon-py = { git = "https://github.com/PerseusDLCode/kodon-py.git" }
